<resources>
    <string name="app_name">สถานที่ท่องเที่ยวจังหวัดมุกดาหาร</string>
    <string name="facebook_app_id">177692056430874</string>
    <string name="fb_login_protocol_scheme">fb177692056430874</string>
    <string name="txt_loading">Loading…</string>
    <string name="txt_ok">ตกลง</string>
    <string name="txt_logout">ออกจากระบบ</string>
    <string name="txt_des_logout">คุณแน่ใจหรือว่าจะออกจากระบบ?</string>
    <string name="txt_cancel">ยกเลิก</string>
    <string name="txt_select_image">เลือกรูปาพ</string>
    <string name="txt_menu_place">สถานที่</string>
    <string name="txt_menu_placecate">หมวดหมู่สถานที่</string>
    <string name="txt_menu_account">บัญชีผู้ใช้</string>
    <string name="txt_login">เข้าสู่ระบบ (Login)</string>
    <string name="txt_login2">เข้าสู่ระบบ</string>
    <string name="txt_login_des">ยินดีต้อนรับสมาชิกทุกท่าน</string>
    <string name="txt_email">อีเมล</string>
    <string name="txt_password">รหัสผ่าน</string>
    <string name="txt_register">สมัครสมาชิก</string>
    <string name="txt_register_des">สมัครสมาชิก</string>
    <string name="txt_login_facebook">เชื่อมต่อกับเฟสบุ๊ค</string>
    <string name="txt_confirm_password">ยืนยันรหัสผ่าน</string>
    <string name="txt_submit">ตกลง</string>
    <string name="txt_username">ชื่อผู้ใช้</string>
    <string name="txt_permission_denied">การอนุญาตถูกปฏิเสธ</string>
    <string name="txt_error">ผิดพลาด</string>
    <string name="txt_please_try_again">กรุณาลองอีกครั้ง</string>
    <string name="choose_from_gallery">เลือกรูปภาพ</string>
    <string name="txt_username_incorrect">ชื่อผู้ใช้ไม่ถูกต้อง</string>
    <string name="txt_email_incorrect">อีเมลไม่ถูกต้อง</string>
    <string name="txt_password_not_match">ขออภัย! รหัสผ่านไม่ตรงกัน</string>
    <string name="txt_image_profile_require">ต้องการรายละเอียดภาพ</string>
    <string name="txt_successfully">ประสบความสำเร็จ</string>
    <string name="txt_auth_fail">เกิดข้อผิดพลาด</string>
    <string name="txt_place">สถานที่</string>
    <string name="txt_get_user_info_error">ขออภัย! ไม่สามารถรับข้อมูลผู้ใช้</string>
    <string name="txt_my_place">เพิ่มสถานที่ของฉัน</string>
    <string name="txt_select_location">เลือกตำแหน่ง</string>
    <string name="txt_select">เลือกพิกัด</string>
    <string name="txt_my_place_empty">Empty list place please\npress add button for add you place</string>
    <string name="txt_create_place">สร้างสถานที่</string>
    <string name="txt_edit_place">แก้ไขสถานที่ของเรา</string>
    <string name="txt_edit">แก้ไข</string>
    <string name="txt_delete">ลบ</string>
    <string name="txt_yes">ใช่</string>
    <string name="txt_no">ไม่</string>
    <string name="txt_des_delete_place">คุณแน่ใจหรือไม่ว่าจะลบสถานที่นี้</string>
    <string name="txt_delete_place">ลบสถานที่</string>
    <string name="txt_empty_place">ขออภัย! รายการว่างเปล่า</string>
    <string name="txt_add_image_place">เพิ่มรูปภาพ</string>
    <string name="txt_name">ชื่อ</string>
    <string name="txt_des">รายละเอียด</string>
    <string name="txt_facebook_link">เวลาทำการ เปิด - ปิด :</string>
    <string name="txt_phone_number">เบอร์โทร :</string>
    <string name="txt_add_location">ระบุตำแหน่งสถานที่</string>
    <string name="txt_save">บันทึก</string>
    <string name="txt_require_image_place">กรุณาเพิ่มรูปภาพของคุณ 3 รูป </string>
    <string name="txt_require_place_name">ต้องการชื่อสถานที่</string>
    <string name="txt_require_place_des">ต้องระบุสถานที่</string>
    <string name="txt_require_place_link_facebook">กรุณาใส่เวลาทำการให้ถูกต้อง</string>
    <string name="txt_require_place_phone_number">ต้องระบุหมายเลขโทรศัพท์</string>
    <string name="txt_require_place_location">ต้องการตำแหน่งสถานที่</string>
    <string name="txt_title_rate_app">ให้คะแนนสถานที่ท่องเที่ยวแห่งนี้</string>
    <string name="txt_title_facebook">เวลาทำการ เปิด - ปิด :</string>
    <string name="txt_title_tel">เบอร์โทร :</string>
    <string name="txt_avg_rating">การจัดอันดับเฉลี่ย</string>
    <string name="txt_see_all_comment">ดูความคิดเห็นทั้งหมด</string>
    <string name="txt_hint_comment">เขียนความคิดเห็น ...</string>
    <string name="txt_require_message">ต้องการข้อความ</string>
    <string name="txt_empty_comment">ความคิดเห็นว่างเปล่า</string>
    <string name="txt_all_comment">ความคิดเห็นทั้งหมด</string>
    <string name="txt_menu_search">ค้นหา</string>
    <string name="txt_search">ค้นหา</string>
    <string name="txt_search_empty">ไม่พบข้อมูล !!!</string>
    <string name="txt_admin">ผู้ดูแลระบบ</string>
    <string name="txt_menu_news">กิจกรรมประชาสัมพันธู์</string>
    <string name="txt_news_empty">ขออภัย! ข่าวว่างเปล่า</string>
    <string name="txt_title_news">ข่าวเรื่อง</string>
    <string name="txt_des_news">รายละเอียดของข่าว</string>
    <string name="txt_topic_news">ข่าวสาร</string>
    <string name="txt_create_news">สร้างข่าว</string>
    <string name="txt_edit_news">แก้ไขข่าว</string>
    <string name="txt_require_title_news">ต้องการข่าวเรื่อง</string>
    <string name="txt_require_des_news">ต้องการรายละเอียดข่าว</string>
    <string name="txt_try_again">กรุณาลองอีกครั้ง</string>
    <string name="txt_delete_news">ลบข่าว</string>
    <string name="txt_des_delete_news">คุณแน่ใจหรือไม่ว่าลบข่าวนี้</string>
    <string name="txt_delete_comment">ลบคอมเม้น</string>
    <string name="txt_des_delete_comment">คุณแน่ใจหรือไม่ว่าคอมเม้นนี้</string>
    <string name="txt_title">หัวข้อกิจกรรม</string>
    <string name="txt_save_news">บันทึกกิจกรรม</string>
    <string name="txt_all_place">สถานที่ทั้งหมด</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
