<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:paddingEnd="24dp"
            android:paddingStart="24dp"
            android:paddingTop="16dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgProfile"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_avatar"
                app:civ_border_color="@android:color/darker_gray"
                app:civ_border_width="2dp"
                app:civ_fill_color="@android:color/darker_gray" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_account_box_grey_500_24dp"
                android:text="@string/txt_username"
                android:textSize="16sp"
                android:textStyle="bold" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tvUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="16sp"
                tools:text="Username" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_email_grey_500_24dp"
                android:text="@string/txt_email"
                android:textSize="16sp"
                android:textStyle="bold" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tvEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="16sp"
                tools:text="Email" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/btnMyPlace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_place_grey_500_24dp"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/txt_my_place"
                android:textSize="16sp"
                android:textStyle="bold" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/btnLogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_lock_open_grey_500_24dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/txt_logout"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <include layout="@layout/progress_bar" />

    </FrameLayout>

</ScrollView>