<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:padding="16dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_add_image_place"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <FrameLayout
                    android:id="@+id/btnAddImgPlaceOne"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/imgPlaceOne"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_marginEnd="5dp"
                        android:background="@android:color/darker_gray"
                        android:scaleType="centerCrop" />

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/icAdd1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_add_white_24dp" />
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/btnAddImgPlaceTwo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/imgProductTwo"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_marginEnd="5dp"
                        android:background="@android:color/darker_gray"
                        android:scaleType="centerCrop" />

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/icAdd2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_add_white_24dp" />
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/btnAddImgPlaceThree"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/imgPlaceThree"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_marginEnd="5dp"
                        android:background="@android:color/darker_gray"
                        android:scaleType="centerCrop" />

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/icAdd3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_add_white_24dp" />
                </FrameLayout>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/txt_name">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etProductName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:entries="@array/category" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/txt_des">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etDes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/txt_facebook_link">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etFacebookLink"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/txt_phone_number">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone" />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/imgMap"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                android:scaleType="centerCrop"
                android:visibility="gone" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/txt_add_location"
                android:textAllCaps="false" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>